--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,12 @@
 /* Add application styles & imports to this file! */
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body {
+  font-size: 15px;
+  font-weight: 400;
+}
+p {
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  line-height: 1.8rem;
+}
