--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,1 +1,6 @@
-<p>Form works</p>
+  <div class="form-line" fxLayout.xs="column" fxLayout="row">
+  <mat-form-field fxFlex>
+    <input matInput placeholder="Name">
+  </mat-form-field>
+  <button fxFlex fxFlexAlign="start" mat-raised-button>Ok</button>
+  </div>
