--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -2,5 +2,5 @@
   <mat-form-field fxFlex>
     <input matInput placeholder="Name">
   </mat-form-field>
-  <button fxFlex fxFlexAlign="start" mat-raised-button>Ok</button>
+  <button fxFlex="20%" fxFlexAlign="start" mat-raised-button>Ok</button>
   </div>
