3 files modified, 1 added, 1 deleted

--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,10 +1,25 @@
   <form class="form-space" #userForm="ngForm" fxLayout="column" ngNativeValidate>
-    <div class="form-line" fxLayout.xs="column" fxLayout="row">
+    <div class="form-line" fxLayout="column">
       <mat-form-field fxFlex>
-        <input matInput placeholder="Name" name="userName" [(ngModel)]="user.name" required >
+        <input matInput type="text" placeholder="Name" name="userName" [(ngModel)]="user.name" required >
       </mat-form-field>
-      <input mat-button type="submit" fxFlex="20%" fxFlexAlign="start" value="Ok">
+      <mat-form-field fxFlex>
+        <input matInput type="email" placeholder="E-Mail" name="email" [(ngModel)]="user.email" required >
+      </mat-form-field>
+      <mat-form-field fxFlex>
+        <input matInput type="password" placeholder="Password" name="password" [(ngModel)]="user.password" #password required >
+      </mat-form-field>
+      <mat-form-field fxFlex>
+        <input matInput type="password" placeholder="Confirm Password" name="confirm-password" #confirmPassword required >
+      </mat-form-field>
+      <mat-form-field fxFlex>
+        <input matInput type="text" placeholder="County" name="country" required
+        [(ngModel)]="user.address">
+      </mat-form-field>
+
+      <button mat-raised-button type="button" fxFlex="20%" fxFlexAlign="start">Enviar</button>
     </div>
   </form>
 
   {{userForm.value | json}}
+  {{user | json}}
