--- a/src/app/user-settings-form/user-settings-form.component.css
+++ b/src/app/user-settings-form/user-settings-form.component.css
@@ -1,9 +1,9 @@
 .form-space {
   width: 90%;
   border: 1px solid black;
+  border-left: 10px solid blue;
   margin: 0 auto 5px auto;
-}
-.form-line {
-  padding: 5px;
   box-shadow: 4px 4px 3px grey;
+  border-radius: 10px;
+  padding: 10px;
 }
