--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -12,10 +12,10 @@
       <input matInput type="email" placeholder="E-Mail" name="email" [(ngModel)]="user.email" required >
     </mat-form-field>
     <mat-form-field fxFlex>
-      <input matInput type="password" placeholder="Password" name="password" [(ngModel)]="user.password" #password required minlength="6" maxlength="8" #password="ngModel">
+      <input matInput type="password" placeholder="Password" name="password" [(ngModel)]="user.password" #password="ngModel" required minlength="6" maxlength="8" >
     </mat-form-field>
     <mat-form-field fxFlex>
-      <input matInput type="password" placeholder="Confirm Password" name="confirmPassword" #confirmPassword  [(ngModel)]="user.confirmPassword" required minlength="6" maxlength="8" #confirmPassword="ngModel">
+      <input matInput type="password" placeholder="Confirm Password" name="confirmPassword" [(ngModel)]="user.confirmPassword" required minlength="6" maxlength="8" #confirmPassword="ngModel">
     </mat-form-field>
     <p>Please, informe your address:</p>
 
