--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -2,11 +2,11 @@
     <p>Please, informe your personal and login info:</p>
     <mat-form-field fxFlex>
       <input matInput type="text" placeholder="Name" name="userName" [(ngModel)]="user.name" 
-        required minLength="4" maxlength="80" pattern="^\w+(\s\w+){1,10}">
+        required minLength="4" maxlength="80" pattern="^[\wÀ-ú]+(\s[\wÀ-ú]+){1,10}">
     </mat-form-field>
     <mat-form-field fxFlex>
       <input matInput type="tel" placeholder="Telephone" name="tel" [(ngModel)]="user.tel" 
-      required minlength="8" maxlength="15">
+      required minlength="8" maxlength="15" pattern="^\d+">
     </mat-form-field>
     <mat-form-field fxFlex>
       <input matInput type="email" placeholder="E-Mail" name="email" [(ngModel)]="user.email" required >
