--- a/src/app/user-data-form/user-data-form.component.html
+++ b/src/app/user-data-form/user-data-form.component.html
@@ -1,5 +1,5 @@
-  <form class="form-space" fxLayout="column" #userForm="ngForm" (ngSubmit)="onSubmit()" ngNativeValidate>
-    <p>Please, informe your personal and login info:</p>
+  <form class="form-space" fxLayout="column" #userDataForm="ngForm" (ngSubmit)="onSubmit()" ngNativeValidate>
+    <p>Please, check your personal data, address, contact info and login password:</p>
     <mat-form-field fxFlex>
       <input matInput type="text" placeholder="Name" name="userName" [(ngModel)]="user.name" 
         required minLength="4" maxlength="80" pattern="^[\wÀ-ú]+(\s[\wÀ-ú]+){1,10}">
@@ -11,6 +11,8 @@
     <mat-form-field fxFlex>
       <input matInput type="email" placeholder="E-Mail" name="email" [(ngModel)]="user.email" required >
     </mat-form-field>
+    <mat-divider></mat-divider>
+    <p>Do you want to change your password?</p>
     <mat-form-field fxFlex>
       <input matInput type="password" placeholder="Password" name="password" [(ngModel)]="user.password" #password="ngModel" required minlength="6" maxlength="8" >
     </mat-form-field>
@@ -19,8 +21,8 @@
     </mat-form-field>
     <p>Please, informe your address:</p>
 
-    <button mat-raised-button type="submit" fxFlex="20%" fxFlexAlign="center" [disabled]="!userForm.form.valid">Enviar</button>
+    <button mat-raised-button type="submit" fxFlex="20%" fxFlexAlign="center" [disabled]="!userDataForm.form.valid">Enviar</button>
   </form>
 
-  {{userForm.value | json}}
+  {{userDataForm.value | json}}
   {{user | json}}
