--- a/src/app/user-data-form/user-data-form.component.html
+++ b/src/app/user-data-form/user-data-form.component.html
@@ -56,7 +56,7 @@
     <!--This area deal with docs -->
     <p>Documents</p>
     <mat-form-field fxFlex>
-      <input matInput type="tel" placeholder="Telephone"
+      <input matInput type="number" placeholder="Telephone"
       name="tel" [(ngModel)]="user.tel" #tel="ngModel"
       required minlength="8" maxlength="15" pattern="^(\+?\d+)(\s?-?\d+){0,3}">
       <mat-error *ngIf="tel.touched && tel.invalid">
@@ -64,7 +64,7 @@
       </mat-error>
     </mat-form-field>
     <mat-form-field fxFlex>
-      <input matInput type="tel" placeholder="Telephone"
+      <input matInput type="number" placeholder="Telephone"
       name="tel" [(ngModel)]="user.tel" #tel="ngModel"
       required minlength="8" maxlength="15" pattern="^(\+?\d+)(\s?-?\d+){0,3}">
       <mat-error *ngIf="tel.touched && tel.invalid">
@@ -72,7 +72,7 @@
       </mat-error>
     </mat-form-field>
     <mat-form-field fxFlex>
-      <input matInput type="tel" placeholder="Telephone"
+      <input matInput type="number" placeholder="Telephone"
       name="tel" [(ngModel)]="user.tel" #tel="ngModel"
       required minlength="8" maxlength="15" pattern="^(\+?\d+)(\s?-?\d+){0,3}">
       <mat-error *ngIf="tel.touched && tel.invalid">
