--- a/src/app/user-data-form/user-data-form.component.html
+++ b/src/app/user-data-form/user-data-form.component.html
@@ -11,11 +11,12 @@
     <mat-form-field fxFlex>
       <input matInput type="tel" placeholder="Telephone"
       name="tel" [(ngModel)]="user.tel" #tel="ngModel"
-      required minlength="8" maxlength="15" pattern="^(\+?\d+)(\s?-?\d+){0,3}">
-      <mat-error *ngIf="tel.touched && tel.invalid">
+      required minlength="8" maxlength="15">
+      <mat-error *ngIf="tel.touched && tel.invalid">   
           A valid phone is required.
       </mat-error>
     </mat-form-field>
+      {{tel.valid}} {{tel.dirty}} {{tel.errors | json}}
     <mat-form-field fxFlex>
       <input matInput type="email" placeholder="E-Mail" name="email" [(ngModel)]="user.email" required #email="ngModel">
       <mat-error *ngIf="email.touched && email.invalid">
