3 files modified, 3 added

--- a/src/app/generic-card/generic-card.component.html
+++ b/src/app/generic-card/generic-card.component.html
@@ -5,6 +5,7 @@
     <mat-card-title >
       {{cardData.title}}
     </mat-card-title>
+    <mat-card-subtitle *ngIf="cardData.subtitle"></mat-card-subtitle>
 
   </mat-card-title-group>
   <mat-card-content>
