--- a/src/app/generic-card/generic-card.component.html
+++ b/src/app/generic-card/generic-card.component.html
@@ -1,4 +1,4 @@
-<mat-card [class.mat-elevation-z8]="true">
+<mat-card class="generic-card" [class.mat-elevation-z8]="true">
    <img mat-card-image [src]="cardData.imgSrc">
   <mat-card-title-group >
     <mat-card-title >
