--- a/src/app/generic-card/generic-card.component.html
+++ b/src/app/generic-card/generic-card.component.html
@@ -1,5 +1,5 @@
 <mat-card class="generic-card" [class.mat-elevation-z8]="true">
-  
+  <img mat-card-image [src]="cardData.imgSrc">
   <mat-card-title-group >
     
     <mat-card-title >
