--- a/src/app/card-line/card-line.component.html
+++ b/src/app/card-line/card-line.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="15px" fxLayoutAlign.gt-sm="stretch stretch">
+<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="15px" fxLayoutAlign.gt-sm="center stretch">
   <app-generic-card fxFlex fxFlex.gt-sm="50%" fxFlex.gt-md="30%"
   *ngFor="let cardData of cardsObject" [cardData]="cardData"></app-generic-card>
 </div>
