--- a/src/app/generic-card/generic-card.component.css
+++ b/src/app/generic-card/generic-card.component.css
@@ -1,8 +1,6 @@
 mat-card {
-  background-color: snow;
+  background-color: mistyrose;
   border-left: 10px solid salmon;
+
 }
 
-mat-card img {
- text-align: center;
-}
