--- a/src/app/donate-card/donate-card.component.html
+++ b/src/app/donate-card/donate-card.component.html
@@ -1,16 +1,18 @@
-<div fxLayout="column"fxLayoutGap="15px" fxLayoutAlign="center center">
-  <mat-card fxFlex="33%" class="generic-card" [class.mat-elevation-z4]="true">
+<div fxLayout="column" fxLayoutGap="15px" fxLayoutAlign="center center">
+  <mat-card fxFlex="25%" class="generic-card" [class.mat-elevation-z4]="true">
   <mat-card-title-group >
     
     <mat-card-title >
       Apoie a nossa causa
     </mat-card-title>
-
   </mat-card-title-group>
   <mat-card-content>
     <p>
       Faça uma doação.
     </p>
   </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button><mat-icon>favorite</mat-icon>Doe!</button>
+  </mat-card-actions>
 </mat-card>
 </div>
