--- a/src/app/donate-card/donate-card.component.html
+++ b/src/app/donate-card/donate-card.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" fxLayoutGap="15px" fxLayoutAlign="center center">
-  <mat-card fxFlex="25%" class="generic-card" [class.mat-elevation-z4]="true">
+  <mat-card fxFlex="25%" class="generic-card" [class.mat-elevation-z1]="true">
   <mat-card-title-group >
     
     <mat-card-title >
@@ -11,8 +11,8 @@
       Faça uma doação.
     </p>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button><mat-icon>favorite</mat-icon>Doe!</button>
+  <mat-card-actions fxLayoutAlign="center center">
+    <button mat-raised-button><mat-icon>favorite</mat-icon> Doe!</button>
   </mat-card-actions>
 </mat-card>
 </div>
