--- a/src/app/donate-card/donate-card.component.html
+++ b/src/app/donate-card/donate-card.component.html
@@ -12,7 +12,7 @@
     </p>
   </mat-card-content>
   <mat-card-actions fxLayoutAlign="center center">
-    <button mat-raised-button><mat-icon>favorite</mat-icon> Doe!</button>
+    <button mat-raised-button><mat-icon>favorite</mat-icon> Doar Agora!</button>
   </mat-card-actions>
 </mat-card>
 </div>
